k8s-on-premise-cloud/movie-web-frontend/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movie-web-frontend-ingress
  namespace: movie-web
  annotations:
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
    nginx.ingress.kubernetes.io/use-forwarded-for: "true"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
    nginx.ingress.kubernetes.io/preserve-host: "true"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      Include /etc/nginx/modsecurity/modsecurity.conf
      Include /etc/nginx/owasp-modsecurity-crs/crs-setup.conf
      
    nginx.ingress.kubernetes.io/server-snippet: |
      error_page 403 = @403;
      location @403 {
        default_type application/json;
        
        access_by_lua_block {
          local blocked_rule = os.getenv("blocked_rule_id") or "forbidden"
          ngx.header.content_type = "application/json"
          
          if blocked_rule == "100001" then
            ngx.say('{"status":403,"message":"Access denied: Vietnam region only","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "100004" then 
            ngx.say('{"status":429,"message":"Rate limiting exceeded","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "930100" then
            ngx.say('{"status":403,"message":"Path Traversal Attack detected","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "930121" then
            ngx.say('{"status":403,"message":"OS File Access Attempt in REQUEST_HEADERS detected","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "930120" then
            ngx.say('{"status":403,"message":"OS File Access Attempt detected","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "930130" then
            ngx.say('{"status":403,"message":"Restricted File Access Attempt","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "921140" then 
            ngx.say('{"status":403,"message":"HTTP Header Injection Attack via headers","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "921150" then 
            ngx.say('{"status":403,"message":"HTTP Header Injection Attack via payload (CR/LF detected)","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "921160" then 
            ngx.say('{"status":403,"message":"HTTP Header Injection Attack via payload (CR/LF and header-name detected)","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "921190" then
            ngx.say('{"status":403,"message":"HTTP Splitting (CR/LF in request detected)","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "921200" then
            ngx.say('{"status":403,"message":"LDAP Injection Attack","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "921422" then 
            ngx.say('{"status":400,"message":"Content-Type header: Dangerous content type outside the mime type declaration","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "921210" then
            ngx.say('{"status":403,"message":"HTTP Parameter Pollution after detecting bogus char after parameter array","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "931100" then
            ngx.say('{"status":403,"message":"Possible Remote File Inclusion (RFI) Attack: URL Parameter using IP Address","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "931120" then
            ngx.say('{"status":403,"message":"Possible Remote File Inclusion (RFI) Attack: URL Payload Used w/Trailing Question Mark Character (?)","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "931130" then
            ngx.say('{"status":403,"message":"Possible Remote File Inclusion (RFI) Attack: Off-Domain Reference/Link","block_rule":"'..blocked_rule..'"}')
          elseif blocked_rule == "931131" then
            ngx.say('{"status":403,"message":"Possible Remote File Inclusion (RFI) Attack: Off-Domain Reference/Link","block_rule":"'..blocked_rule..'"}')
          end
          return ngx.exit(ngx.HTTP_FORBIDDEN)
        }
      }
spec:
  ingressClassName: nginx
  rules:
    - host: movie.nhatanhweb.website
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: movie-web-frontend-service
                port:
                  number: 80
